[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/games/Gameplay1/Camera.gd" type="Script" id=1]
[ext_resource path="res://scenes/games/Gameplay1/Glider.gd" type="Script" id=2]
[ext_resource path="res://scenes/games/test-takeoff/Path.gd" type="Script" id=3]
[ext_resource path="res://scenes/games/Gameplay1/CessnaPathFollow.gd" type="Script" id=4]
[ext_resource path="res://scenes/objects/Cessna/Cessna.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/objects/Player/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/levels/Airport/Airport.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/levels/Manhattan/Manhattan.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/games/Gameplay1/Gameplay1.gd" type="Script" id=9]
[ext_resource path="res://scenes/objects/environments/Night/Night.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/2d/icons/Arrow_Down_Key_Light.png" type="Texture" id=11]
[ext_resource path="res://assets/2d/icons/Arrow_Up_Key_Light.png" type="Texture" id=12]

[sub_resource type="SphereShape" id=1]
radius = 0.1

[sub_resource type="BoxShape" id=2]
extents = Vector3( 6.08685, 0.651323, 0.511437 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 15.4561, 0.247953, 1 )

[sub_resource type="CapsuleMesh" id=4]
radius = 0.1
mid_height = 2.0

[sub_resource type="CapsuleShape" id=5]
radius = 0.1
height = 2.0

[sub_resource type="Curve3D" id=6]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -0.018528, -0.954168, -0.0578613, 0, 0, 0, 0, 0, 0, 52.8366, -0.828917, 0.0275879, -19.6203, -1.05738, 0, 19.6203, 1.05738, 0, 80.0825, 0.584497, 0.0717773, -57.2763, -11.2675, 0, 57.2763, 11.2675, 0, 169.246, 13.0476, 0.0449219, -157.119, -37.9979, 7.65026e-05, 157.119, 37.9979, -7.65026e-05, 515.672, 122.38, -0.164139, 0, 0, 0, 0, 0, 0, 839.344, 155.708, 0.287842, -917.682, 32.6846, -0.000244141, 917.682, -32.6846, 0.000244141, 2852.76, 245.682, 0.288086 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="BoxShape" id=7]
extents = Vector3( 1, 500, 50 )

[node name="Gameplay1" type="Spatial"]
script = ExtResource( 9 )

[node name="Manhattan" parent="." instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 5066.63, -13.406, -4552.39 )

[node name="Manhattan2" parent="." instance=ExtResource( 8 )]
transform = Transform( 0.999344, 0, 0.0362077, 0, 1, 0, -0.0362077, 0, 0.999344, -1610.47, -13.406, -2683.62 )

[node name="Manhattan3" parent="." instance=ExtResource( 8 )]
transform = Transform( -0.0112572, 0, 0.999936, 0, 1, 0, -0.999936, 0, -0.0112572, 1870.05, -13.7235, 4371.03 )

[node name="Airport" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 1.98997e-08, 4.65661e-10, -3.98431e-08, 1, 0, 4.65661e-10, 0, 1, -104.562, -13.4719, -1.15825e-16 )

[node name="Cessna" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 1.98997e-08, 4.65661e-10, -3.98431e-08, 1, 0, 4.65661e-10, 0, 1, 4.79416, -13.323, 1.11759e-08 )
max_force = 0.1
path_follow_path = NodePath("../Path/CessnaPathFollow")
acceleration = 0.1

[node name="CessnaJoint" type="StaticBody" parent="Cessna"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.55026, 1.54949, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Cessna/CessnaJoint"]
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.993855, 0.110688, 0, -0.110688, 0.993855, 0, -7.42888, 27 )
current = true
near = 1.0
far = 5000.0
script = ExtResource( 1 )
camera_speed = 5.0

[node name="Glider" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -24.3748, -11.2922, 0 )
collision_layer = 2
mass = 20.0
gravity_scale = 0.0
continuous_cd = true
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Glider"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.33832, 0, 0 )
shape = SubResource( 2 )

[node name="CollisionShape2" type="CollisionShape" parent="Glider"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.82427, 0.153923, 0 )
shape = SubResource( 3 )

[node name="Player" parent="Glider" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
collision_layer = 0
collision_mask = 0
control_mode = "Gameplay1"

[node name="Chain" type="Spatial" parent="."]
transform = Transform( 0.992217, 0.124519, 0, -0.124519, 0.992217, 0, 0, 0, 1, -2.08668, -14.825, 0 )

[node name="RigidBody" type="RigidBody" parent="Chain"]
transform = Transform( -3.60255e-08, -0.566349, 0.824166, -2.47559e-08, 0.824166, 0.566349, -1, 0, -4.37114e-08, -0.879494, 2.96279, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Chain/RigidBody"]
mesh = SubResource( 4 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Chain/RigidBody"]
shape = SubResource( 5 )

[node name="RigidBody2" type="RigidBody" parent="Chain"]
transform = Transform( -4.22462e-08, -0.256745, 0.966479, -1.12227e-08, 0.966479, 0.256745, -1, 0, -4.37114e-08, -2.78039, 2.11643, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Chain/RigidBody2"]
mesh = SubResource( 4 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Chain/RigidBody2"]
shape = SubResource( 5 )

[node name="RigidBody3" type="RigidBody" parent="Chain"]
transform = Transform( -4.24214e-08, -0.241143, 0.97049, -1.05407e-08, 0.97049, 0.241143, -1, 0, -4.37114e-08, -4.76756, 1.61264, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Chain/RigidBody3"]
mesh = SubResource( 4 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Chain/RigidBody3"]
shape = SubResource( 5 )

[node name="RigidBody4" type="RigidBody" parent="Chain"]
transform = Transform( -4.24214e-08, -0.241143, 0.97049, -1.05407e-08, 0.97049, 0.241143, -1, 0, -4.37114e-08, -6.80264, 1.07202, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Chain/RigidBody4"]
mesh = SubResource( 4 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Chain/RigidBody4"]
shape = SubResource( 5 )

[node name="RigidBody5" type="RigidBody" parent="Chain"]
transform = Transform( -4.24214e-08, -0.241143, 0.97049, -1.05407e-08, 0.97049, 0.241143, -1, 0, -4.37114e-08, -8.89356, 0.516567, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Chain/RigidBody5"]
mesh = SubResource( 4 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Chain/RigidBody5"]
shape = SubResource( 5 )

[node name="RigidBody6" type="RigidBody" parent="Chain"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -10.9896, 0.262048, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Chain/RigidBody6"]
mesh = SubResource( 4 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Chain/RigidBody6"]
shape = SubResource( 5 )

[node name="RigidBody7" type="RigidBody" parent="Chain"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -13.0969, 0.262048, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Chain/RigidBody7"]
mesh = SubResource( 4 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Chain/RigidBody7"]
shape = SubResource( 5 )

[node name="RigidBody8" type="RigidBody" parent="Chain"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -15.198, 0.262048, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Chain/RigidBody8"]
mesh = SubResource( 4 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Chain/RigidBody8"]
shape = SubResource( 5 )

[node name="RigidBody9" type="RigidBody" parent="Chain"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -17.2449, 0.262048, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Chain/RigidBody9"]
mesh = SubResource( 4 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Chain/RigidBody9"]
shape = SubResource( 5 )

[node name="RigidBody10" type="RigidBody" parent="Chain"]
transform = Transform( -3.52774e-08, 0.590479, 0.807053, 2.58106e-08, 0.807053, -0.590479, -1, 0, -4.37114e-08, -19.0228, 0.837128, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Chain/RigidBody10"]
mesh = SubResource( 4 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Chain/RigidBody10"]
shape = SubResource( 5 )

[node name="CessnaPinJoint" type="PinJoint" parent="Chain"]
transform = Transform( 0.966479, -0.256745, 0, 0.256745, 0.966479, 0, 0, 0, 1, -0.111478, 3.48828, 0 )
nodes/node_a = NodePath("../../Cessna/CessnaJoint")
nodes/node_b = NodePath("../RigidBody")

[node name="PinJoint2" type="PinJoint" parent="Chain"]
transform = Transform( 0.966479, -0.256745, 0, 0.256745, 0.966479, 0, 0, 0, 1, -1.75535, 2.42593, 0 )
nodes/node_a = NodePath("../RigidBody")
nodes/node_b = NodePath("../RigidBody2")

[node name="PinJoint3" type="PinJoint" parent="Chain"]
transform = Transform( 0.966479, -0.256745, 0, 0.256745, 0.966479, 0, 0, 0, 1, -3.798, 1.83293, 0 )
nodes/node_a = NodePath("../RigidBody2")
nodes/node_b = NodePath("../RigidBody3")

[node name="PinJoint4" type="PinJoint" parent="Chain"]
transform = Transform( 0.966479, -0.256745, 0, 0.256745, 0.966479, 0, 0, 0, 1, -5.79094, 1.38753, 0 )
nodes/node_a = NodePath("../RigidBody3")
nodes/node_b = NodePath("../RigidBody4")

[node name="PinJoint5" type="PinJoint" parent="Chain"]
transform = Transform( 0.966479, -0.256745, 0, 0.256745, 0.966479, 0, 0, 0, 1, -7.88488, 0.831277, 0 )
nodes/node_a = NodePath("../RigidBody4")
nodes/node_b = NodePath("../RigidBody5")

[node name="PinJoint6" type="PinJoint" parent="Chain"]
transform = Transform( 0.966479, -0.256745, 0, 0.256745, 0.966479, 0, 0, 0, 1, -9.95176, 0.28221, 0 )
nodes/node_a = NodePath("../RigidBody5")
nodes/node_b = NodePath("../RigidBody6")

[node name="PinJoint7" type="PinJoint" parent="Chain"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.0585, 0.28221, 0 )
nodes/node_a = NodePath("../RigidBody6")
nodes/node_b = NodePath("../RigidBody7")

[node name="PinJoint8" type="PinJoint" parent="Chain"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.1389, 0.28221, 0 )
nodes/node_a = NodePath("../RigidBody7")
nodes/node_b = NodePath("../RigidBody8")

[node name="PinJoint9" type="PinJoint" parent="Chain"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16.2002, 0.28221, 0 )
nodes/node_a = NodePath("../RigidBody8")
nodes/node_b = NodePath("../RigidBody9")

[node name="PinJoint10" type="PinJoint" parent="Chain"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18.3083, 0.28221, 0 )
nodes/node_a = NodePath("../RigidBody9")
nodes/node_b = NodePath("../RigidBody10")

[node name="GliderPinJoint" type="PinJoint" parent="Chain"]
transform = Transform( 0.966479, -0.256745, 0, 0.256745, 0.966479, 0, 0, 0, 1, -19.97, 1.30699, 0 )
nodes/node_a = NodePath("../RigidBody10")
nodes/node_b = NodePath("../../Glider")

[node name="Path" type="Path" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.051, 0 )
curve = SubResource( 6 )
script = ExtResource( 3 )

[node name="CessnaPathFollow" type="PathFollow" parent="Path"]
transform = Transform( 0.501845, 0.864913, -0.00846488, -0.864869, 0.501907, 0.00932743, 0.0123161, 0.00264007, 0.999925, -0.018528, -0.954168, -0.0578613 )
loop = false
script = ExtResource( 4 )

[node name="StartArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 231.696, 45.1735, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="StartArea"]
shape = SubResource( 7 )

[node name="EndArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4200, 500, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="EndArea"]
shape = SubResource( 7 )

[node name="NightWorldEnvironment" parent="." instance=ExtResource( 10 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Goals" type="MarginContainer" parent="CanvasLayer/UI"]
margin_left = 20.0
margin_top = 20.0
margin_right = 263.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/Goals"]
margin_right = 243.0
margin_bottom = 100.0

[node name="Title" type="Label" parent="CanvasLayer/UI/Goals/VBoxContainer"]
margin_right = 243.0
margin_bottom = 14.0
text = "OBJECTIFS :"

[node name="Objectifs" type="Label" parent="CanvasLayer/UI/Goals/VBoxContainer"]
margin_top = 18.0
margin_right = 243.0
margin_bottom = 66.0
text = "- Rester au dessus de l'avion tracteur
- Limiter la force exercé sur le cable
- Eviter les turbulences"

[node name="Helper" type="MarginContainer" parent="CanvasLayer/UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -292.0
margin_top = -170.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/Helper"]
margin_right = 272.0
margin_bottom = 150.0
alignment = 2

[node name="PitchUp" type="HBoxContainer" parent="CanvasLayer/UI/Helper/VBoxContainer"]
margin_top = 86.0
margin_right = 272.0
margin_bottom = 116.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/UI/Helper/VBoxContainer/PitchUp"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 11 )
expand = true

[node name="Label" type="Label" parent="CanvasLayer/UI/Helper/VBoxContainer/PitchUp"]
margin_left = 34.0
margin_right = 272.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Tirer le manche / Relever le nez"
valign = 1

[node name="PitchDown" type="HBoxContainer" parent="CanvasLayer/UI/Helper/VBoxContainer"]
margin_top = 120.0
margin_right = 272.0
margin_bottom = 150.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/UI/Helper/VBoxContainer/PitchDown"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 12 )
expand = true

[node name="Label" type="Label" parent="CanvasLayer/UI/Helper/VBoxContainer/PitchDown"]
margin_left = 34.0
margin_right = 272.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Pousser le manche / Baisser le nez"
valign = 1

[node name="Force" type="MarginContainer" parent="CanvasLayer/UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -68.0
margin_right = 206.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/Force"]
margin_right = 186.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="CanvasLayer/UI/Force/VBoxContainer"]
margin_right = 186.0
margin_bottom = 14.0
text = "Force sur le cable :"

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/UI/Force/VBoxContainer"]
margin_top = 18.0
margin_right = 186.0
margin_bottom = 48.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 5.0
percent_visible = false

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="force_updated" from="Glider" to="." method="_on_Glider_force_updated"]
[connection signal="body_entered" from="StartArea" to="." method="_on_StartArea_body_entered"]
[connection signal="body_entered" from="EndArea" to="." method="_on_EndArea_body_entered"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_RestartTimer_timeout"]
